2012-01-24  Julien Danjou  <julien@danjou.info>

	* color.el (color-rgb-to-hsl): Fix value computing.
	(color-hue-to-rgb): New function.
	(color-hsl-to-rgb): New function.
	(color-clamp, color-saturate-hsl, color-saturate-name)
	(color-desaturate-hsl, color-desaturate-name, color-lighten-hsl)
	(color-lighten-name, color-darken-hsl, color-darken-name): New function.

2012-01-21  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* mm-decode.el (mm-interactively-view-part): Fix prompt.

2012-01-19  Julien Danjou  <julien@danjou.info>

	* color.el (color-name-to-rgb): Use the white color to find the max
	color component value and return correctly computed values.
	(color-name-to-rgb): Add missing float conversion for max value.

2012-01-10  Teodor Zlatanov  <tzz@lifelogs.com>

	* nntp.el (nntp-send-authinfo): Query `auth-source-search' with the
	logical server name in addition to the actual machine address.

	* auth-source.el (auth-source-user-and-password): Add convenience
	wrapper to search by just host and optionally user.

2012-01-07  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-visit-file): Move point to the beginning of the buffer
	after rendering.

2012-01-07  Teodor Zlatanov  <tzz@lifelogs.com>

	* gnus-sync.el (gnus-sync-newsrc-groups): Quote normally.
	(gnus-sync-lesync-pre-save-group-entry): Remove invalid invlists.
	(gnus-sync-lesync-normalize-group-entry): Ignore a few more keys.

2012-01-07  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-summary-read-group): Document more parameters
	(bug#9693).
	(gnus-summary-setup-buffer): Document return value (bug#9697).

	* mm-decode.el (mm-interactively-view-part): Use `completing-read',
	since ido doesn't work on symbols (bug#9632).

	* gnus.el (gnus-group-fast-parameter): Use the same precedence rules
	when getting a single value as when getting all the values.  This means
	that atoms like `gcc-self' work cumulatively, like variable settings,